[package]
name = "telebot"
version = "0.1.0"
authors = ["Anonymous <anon@ymo.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7"
tokio = { version = "0.2.21", features = ["macros"] }
futures = "0.3.5"
dirs = "3.0.1"
notify = "4.0.15"
chrono = "0.4"